--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "firebase": "^5.5.5",
+    "panzoom": "^6.3.1",
+    "svg.js": "^2.6.6",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
