--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cloudinary": "^1.11.0",
     "firebase": "^5.5.5",
     "panzoom": "^6.3.1",
