--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.1",
     "multer-azure-storage": "^0.2.0",
     "multiparty": "^4.2.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "validate-image-url": "^1.0.1"
   }
 }
